--- a/quiz.css
+++ b/quiz.css
@@ -208,7 +208,7 @@ body {
         }
 
         .pass {
-            background-color: orange;
+            background-color: red;
             color: white;
         }
         .score1{
