--- a/quiz.css
+++ b/quiz.css
@@ -1,361 +1,414 @@
 body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            background-color: #f0f0f0;
-            
-            background-image: url("image/kbcc.jpg");
-        }
-        
-        h1{
-            text-align: left;
-            background-color: blue;
-            border-radius: 7px;
-            color:rgb(252, 252, 255);
-            margin-left: 4%;
-            padding: 0;
-            margin-bottom: 2px;
-            margin-right: 56%;
-            font-weight: bold;
-        }
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #f0f0f0;
+    
+    background-image: url("image/kbcc.jpg");
+}
 
-        .profile-container {
-            display: inline-flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 300px;
-            margin-left: 50%;
-            margin-top: 50px;
-            padding-bottom: auto;
-            position: absolute;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+h1{
+    text-align: left;
+    background-color: blue;
+    border-radius: 7px;
+    color:rgb(252, 252, 255);
+    margin-left: 4%;
+    padding: 0;
+    margin-bottom: 2px;
+    margin-right: 56%;
+    font-weight: bold;
+}
 
-        }
+.profile-container {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    margin-left: 50%;
+    margin-top: 50px;
+    padding-bottom: auto;
+    position: absolute;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 
-        .profile {
-            text-align: center;
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
+}
 
-        .profile-name {
-            font-weight: bold;
-            font-size: 22px;
-        }
+.profile {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
 
-        .profile-score {
-            margin-top: 10px;
-            font-size: 26px;
-            color: #4CAF50;
-            font-weight: bold;
-            transition: transform 0.3s ease-in-out;
-        }
+.profile-name {
+    font-weight: bold;
+    font-size: 22px;
+}
 
-        .active-user-section {
-            text-align: center;
-            font-size: 22px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            margin-left: 20px;
-           
-        }
+.profile-score {
+    margin-top: 10px;
+    font-size: 26px;
+    color: #4CAF50;
+    font-weight: bold;
+    transition: transform 0.3s ease-in-out;
+}
 
-        .ranking-section {
-            margin-top: 20px;
-            text-align: left;
-            width: auto;
-            background-color: aliceblue;
-            margin-bottom: auto;
-            padding: auto;
-            margin-left: auto;
-        }
+.active-user-section {
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-left: 20px;
+   
+}
 
-        .ranking-section h2 {
-            margin-bottom: 10px;
-            font-size: 28px;
-            text-align: center;
-        }
+.ranking-section {
+    margin-top: 20px;
+    text-align: left;
+    width: 280px;
+    background-color: aliceblue;
+    margin-bottom: auto;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
 
-        .user-list {
-            list-style: none;
-            padding: 0;
-            font-size: 16px;
-            margin-bottom: 50px;
-            margin-left: 10px;
-        }
+.ranking-section h2 {
+    margin-bottom: 10px;
+    font-size: auto;
+    text-align: center;
+}
 
-        .user-list li {
-            font-weight: bold;
-            color:blue;
-            line-height: auto;
+.user-list {
+    list-style: none;
+    padding: 0;
+    font-size: 16px;
+    margin-bottom: 50px;
+    margin-left: 10px;
+}
 
-        }
+.user-list li {
+    font-weight: bold;
+    color:blue;
+    line-height: auto;
 
-        .container {
-            display: flex;
-            flex-direction: row;
-            flex: 1;
-        }
+}
 
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(8, 50px);
-            grid-template-rows: repeat(10, 50px);
-            gap: 10px;
-            margin: 20px;
-        }
+.container {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
 
-        .grid-item {
-            background-color: #add8e6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 18px;
-            font-weight: bold;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .grid-item.disabled {
-            background-color: #ee0505;
-            pointer-events: none;
-            color: #fff;
-        }
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(8, 50px);
+    grid-template-rows: repeat(10, 50px);
+    gap: 10px;
+    margin: 20px;
+}
 
-        .main-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            flex: 1;
-            margin: 20px;
-        }
+.grid-item {
+    background-color: #add8e6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.grid-item.disabled {
+    background-color: #ee0505;
+    pointer-events: none;
+    color: #fff;
+}
 
-        .question-container {
-            background-color: #0404a1;
-            color: rgb(255, 255, 255);
-            border-color: gray;
-            border-width: 10rem;
-            padding: 20px;
-            border-radius: 5px;
-            text-align: center;
-            font-size: 20px;
-            margin-bottom: 20px;
-            width: 100%;
-            margin-right: 20px;
-            border-width: 1rem;
-            border-radius: 15px;
-            font-weight: bolder;
-        }
-        
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    margin: 20px;
+}
 
-        .timer {
-            font-size: 28px;
-            margin-bottom: 20px;
-            font-weight: bolder;
-            color: white;
-            border-radius: 5px;
-        }
-        .timer-line-container {
-            width: 108%; 
-            height: 15px; 
-            background-color: #ffffff; 
-            position: relative; 
-            margin-right: 10px;
-            
-        }
-        
-        .timer-line {
-            height: 100%; 
-            background-color: green; 
-            width: 100%; 
-            position: absolute;
-            left: 0; 
-            transition: width 1s linear, background-color 1s linear; 
-        }
-              
+.question-container {
+    background-color: #0404a1;
+    color: rgb(255, 255, 255);
+    border-color: gray;
+    border-width: 10rem;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    margin-right: 20px;
+    border-width: 1rem;
+    border-radius: 15px;
+    font-weight: bolder;
+}
 
-        .button-container {
-            display: flex;
-            justify-content: space-around;
-            width: 110%;
-            padding: 0;
-        }
 
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-            margin-right: 10px;
-        }
+.timer {
+    font-size: 28px;
+    margin-bottom: 20px;
+    font-weight: bolder;
+    color: white;
+    border-radius: 5px;
+}
+.timer-line-container {
+    width: 108%; 
+    height: 15px; 
+    background-color: #ffffff; 
+    position: relative; 
+    margin-right: 10px;
+    
+}
 
-        .right-answer {
-            background-color: green;
-            color: white;
-        }
+.timer-line {
+    height: 100%; 
+    background-color: green; 
+    width: 100%; 
+    position: absolute;
+    left: 0; 
+    transition: width 1s linear, background-color 1s linear; 
+}
+      
 
-        .show-answer {
-            background-color: blue;
-            color: white;
-        }
+.button-container {
+    display: flex;
+    justify-content: space-around;
+    width: 110%;
+    padding: 0;
+}
 
-        .pass {
-            background-color: red;
-            color: white;
-        }
-        .score1{
-            background-color: green;
-            color: white;
-        }
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+}
 
-        /* Add this to your CSS file or inside a <style> tag in your HTML head */
-        .disabled-button {
-            background-color: #f8d7da; /* Light red background */
-            color: #721c24; /* Dark red text color */
-            border: 1px solid #f5c6cb; /* Border color to match the background */
-            cursor: not-allowed; /* Change cursor to indicate that the button is not clickable */
-        }
+.right-answer {
+    background-color: green;
+    color: white;
+}
 
-        /* Add this to your CSS file or inside a <style> tag in your HTML head */
-button:disabled {
-    background-color:red; /* Light red background */
+.show-answer {
+    background-color: blue;
+    color: white;
+}
+
+.pass {
+    background-color: red;
+    color: white;
+}
+.score1{
+    background-color: green;
+    color: white;
+}
+
+/* Add this to your CSS file or inside a <style> tag in your HTML head */
+.disabled-button {
+    background-color: #f8d7da; /* Light red background */
     color: #721c24; /* Dark red text color */
-    cursor: not-allowed; /* Change cursor to indicate that the button is not clickable */
     border: 1px solid #f5c6cb; /* Border color to match the background */
+    cursor: not-allowed; /* Change cursor to indicate that the button is not clickable */
+}
+
+/* Add this to your CSS file or inside a <style> tag in your HTML head */
+button:disabled {
+background-color:red; /* Light red background */
+color: #721c24; /* Dark red text color */
+cursor: not-allowed; /* Change cursor to indicate that the button is not clickable */
+border: 1px solid #f5c6cb; /* Border color to match the background */
 }
 
 /* Optionally, you can also add a transition effect for a smooth change */
 button {
-    transition: background-color 0.3s, color 0.3s, border 0.3s;
+transition: background-color 0.3s, color 0.3s, border 0.3s;
 }
 
 
-        #popup {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: blue;
-            color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-            display: none;
-            z-index: 1000;
-        }
+#popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: blue;
+    color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 1000;
+}
 
-        #popup h1 {
-            margin: 0;
-            font-size: 24px;
-            text-align: center;
-            color:white;
-            transition: transform 0.3s ease-in-out;
-        }
-        #popup button{
-            background-color: red;
-            color: white;
+#popup h1 {
+    margin: 0;
+    font-size: 24px;
+    text-align: center;
+    color:white;
+    transition: transform 0.3s ease-in-out;
+}
+#popup button{
+    background-color: red;
+    color: white;
 
-        }
+}
 /* Responsive Design */
 @media (max-width: 1200px) {
-    .profile-container {
-        margin-left: 25%;
-        width: auto;
+.profile-container {
+margin-left: 50%;
+width: auto;
+}
+.grid-container {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: auto;
+    gap: 6px;
+    }
+.ranking-section {
+    width: 220px;
+    margin-left: 0;
+    margin-right: 0%;
+}
+
+.ranking-section h2 {
+    font-size: 16px;
+
+}
+
+.timer {
+    font-size: 24px;
     }
 
-    .ranking-section {
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-    .timer-line-container{
-        width: auto;
-    }
-    .question-container{
-        width: auto;
-        font-size: auto;
-    }
+.timer-line-container{
+     width: 300px;
+     }
+.question-container{
+width: auto;
+font-size: auto;
+}
 }
 
 @media (max-width: 768px) {
-    h1 {
-        margin-right: 10%;
-        margin-left: 10%;
-    }
+h1 {
+margin-right: 10%;
+margin-left: 10%;
+width: auto;
+}
 
-    .profile-container {
-        margin-left: 5%;
-        width: 50%;
-    }
+.profile-container {
+margin-left: 30%;
+margin-top: 10%;
+width: auto;
+}
 
-    .ranking-section {
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 90%;
-        margin-bottom: auto;
-        width: 50%;
-    }
 
-    .grid-container {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: auto;
-        gap: 8px;
+.grid-container {
+grid-template-columns: repeat(4, 1fr);
+grid-template-rows: auto;
+gap: 8px;
+}
+.timer {
+    font-size: 24px;
+    margin-top: 50%;
+    margin-bottom: 20%;
     }
-    .timer-line-container{
-        width: auto;
+.timer-line-container{
+    width: 400px;
     }
-    .question-container {
-        font-size: auto;
-        width: auto;
-    }
-    
-    .timer {
-        font-size: 24px;
-    }
+.question-container {
+font-size: auto;
+width: auto;
+margin-top: 80%;
+}
+.button-container{
+    font-size: auto;
+    width: auto;
+    margin-top: 15%;
+    margin-bottom: 90%;
+}
+.ranking-section {
+    width: 250px;
+    margin-left: 0px;
+    margin-right: 0%;
+}
+
+.ranking-section h2 {
+    font-size: 14px;
+}
+
 }
 
 @media (max-width: 480px) {
-    h1 {
-        font-size: 1.2rem;
-        margin-left: 5%;
-        margin-right: 5%;
+h1 {
+font-size: 1.2rem;
+margin-left: 5%;
+margin-right: 5%;
+width: auto;
+}
+.question-container {
+    font-size: 18px;
+    width: 270px;
+    margin-left: 35%;
+    margin-right: 80%;
+    margin-top: 80%;
+    margin-bottom: 40%;
     }
-
-    .profile-container {
-        margin-left: 5%;
-        width: 25%;
-    }
-
-    .ranking-section {
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: auto;
-        margin-bottom: auto;
-        width: 50%;
-    }
-
-    .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto;
-        gap: 5px;
-    }
-    .question-container{
-        width: auto;
+    .button-container{
         font-size: auto;
-    }
-
-    .timer-line-container{
         width: auto;
+        margin-top: 15%;
+        margin-bottom: 90%;
     }
-    
-    .timer {
-        font-size: 20px;
-    }
+.profile-container {
+margin-left: 30%;
+width: auto;
+}
+
+.button-container{
+    font-size: auto;
+    width: auto;
+    margin-top: 15%;
+    margin-bottom: 300%;
+}
+
+.ranking-section {
+    width: 220px;
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 10px;
+}
+
+.ranking-section h2 {
+    font-size: 10px;
+}
+
+.grid-container {
+grid-template-columns: repeat(3, 1fr);
+grid-template-rows: auto;
+gap: 2px;
+height: auto;
+}
+
+
+.timer-line-container{
+width: 400px;
+}
+
+.timer {
+font-size: 20px;
+margin-top: 110%;
+}
 }
